Added comments for sim data tutorial

--- a/notebooks/Simulated_Data_MediumFunction_Tutorial.ipynb
+++ b/notebooks/Simulated_Data_MediumFunction_Tutorial.ipynb
@@ -1,11 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This notebook demostrates how to use ART on simulated data, where the response variable is modeled using a function with 'medium' level of difficulty."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,32 +58,136 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "user_params = {\n",
-    "    'n_instances_cycle1': 100,\n",
-    "    'num_recommendations': 16,\n",
-    "    'n_cycles': 4,\n",
-    "    'alpha_cycle2': 0.9,\n",
-    "    'alpha_cycle3': 0.5,\n",
-    "    'alpha_cycle4': None,\n",
-    "    'objective': 'maximize',\n",
-    "    'threshold': 0.2,\n",
-    "    'output_directory': '../results/',\n",
-    "    'seed': 42\n",
-    "}"
+    "How many input variables (features) you would like to explore? Or what is the dimensionality of the system?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "user_params['dim'] = 10\n"
+    "user_params = {'dim': 10}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Assign input and response variables:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_var = ['x_' + str(i) for i in range(1, user_params['dim'] + 1)]\n",
+    "response_var = ['y']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the number instances for the initial DBTL cycle:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_params['n_instances_cycle1'] = 100"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the number of recommendations to be generated at each subsequent cycle:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_params['num_recommendations'] = 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the number of cycles you would like to perform:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_params['n_cycles'] = 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the exploitation-exploration parameter `alpha`. Values closer to 1 correspond to exploring regions of input phase space associated with high uncertainty, so as to obtain more data from that region and improve the model’s predictive accuracy in subsequent cycles. Values closer to 0 correspond to exploitation, i.e. optimizing the predicted value for the response variable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_params['alpha_cycle2'] = 0.9\n",
+    "user_params['alpha_cycle3'] = 0.5\n",
+    "user_params['alpha_cycle4'] = None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the objective for optimization and a threshold for defining success (for example, a success is 20% improvement over the best in the training data set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_params['objective'] = 'maximize'\n",
+    "user_params['threshold'] = 0.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the output directory for storing the results and seed for random number generator for the repeatability of the run:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "user_params['output_directory'] = '../results/'\n",
+    "user_params['seed'] = 42"
    ]
   },
   {
@@ -91,6 +195,13 @@
    "metadata": {},
    "source": [
     "## Define true response function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We define a function that will be used to simulate the true values of the response variable"
    ]
   },
   {
@@ -180,6 +291,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define some constraints on the input variables, for example only positive values with an upper bound."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -234,11 +352,11 @@
    "source": [
     "art_params = {\n",
     "    'bounds_file': bounds_file,\n",
-    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)],                    # input variables, i.e. features\n",
-    "    'num_recommendations': user_params['n_instances_cycle1'],    # one of them will be wild type\n",
+    "    'input_var': input_var,                       \n",
+    "    'num_recommendations': user_params['n_instances_cycle1'],    \n",
     "    'initial_cycle': True,                                    # Set this to True for initial designs recommendations\n",
-    "    'seed': user_params['seed'],                                               # seed for number random generator\n",
-    "    'output_directory': user_params['output_directory']  # directory to store this output\n",
+    "    'seed': user_params['seed'],                              \n",
+    "    'output_directory': user_params['output_directory']  \n",
     "}\n"
    ]
   },
@@ -402,7 +520,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Save simulated Cycle 1 data into EDD-style files, to be used as training data for the next cycle:"
+    "Save simulated data into EDD-style files, to be used as training data for the next cycle:"
    ]
   },
   {
@@ -448,14 +566,14 @@
    "source": [
     "art_params = {\n",
     "    'bounds_file': bounds_file,\n",
-    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)],                    # input variables, i.e. features\n",
+    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)],               \n",
     "    'response_var': ['y'],\n",
     "    'objective': user_params['objective'],\n",
     "    'threshold': user_params['threshold'],\n",
     "    'alpha': user_params['alpha_cycle2'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
-    "    'seed': user_params['seed'],                                               # seed for number random generator\n",
-    "    'output_directory': user_params['output_directory']  # directory to store the output\n",
+    "    'seed': user_params['seed'],                           \n",
+    "    'output_directory': user_params['output_directory']  \n",
     "}\n"
    ]
   },
@@ -485,7 +603,12 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -653,14 +776,14 @@
    "source": [
     "art_params = {\n",
     "    'bounds_file': bounds_file,\n",
-    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)],                    # input variables, i.e. features\n",
+    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)], \n",
     "    'response_var': ['y'],\n",
     "    'objective': user_params['objective'],\n",
     "    'threshold': user_params['threshold'],\n",
     "    'alpha': user_params['alpha_cycle3'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
-    "    'seed': user_params['seed'],                                               # seed for number random generator\n",
-    "    'output_directory': user_params['output_directory']  # directory to store the output\n",
+    "    'seed': user_params['seed'],                                 \n",
+    "    'output_directory': user_params['output_directory']  \n",
     "}\n"
    ]
   },
@@ -691,7 +814,12 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -822,14 +950,14 @@
    "source": [
     "art_params = {\n",
     "    'bounds_file': bounds_file,\n",
-    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)],                    # input variables, i.e. features\n",
+    "    'input_var': ['x_' + str(i) for i in range(1, dim + 1)],  \n",
     "    'response_var': ['y'],\n",
     "    'objective': user_params['objective'],\n",
     "    'threshold': user_params['threshold'],\n",
     "    'alpha': user_params['alpha_cycle4'],\n",
     "    'num_recommendations': user_params['num_recommendations'],  \n",
-    "    'seed': user_params['seed'],                                               # seed for number random generator\n",
-    "    'output_directory': user_params['output_directory']  # directory to store the output\n",
+    "    'seed': user_params['seed'],                                \n",
+    "    'output_directory': user_params['output_directory'] \n",
     "}"
    ]
   },
@@ -860,7 +988,12 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
