Adding demos with isoprenol production study

--- a/notebooks/Isoprenol_generate_recommendations.ipynb
+++ b/notebooks/Isoprenol_generate_recommendations.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Generate recommendations for Cycle 2 using ART "
+    "# Notebook D: Generate recommendations for Cycle 2 using ART "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook uses the designs created by ART and the corresponding isoprenol production levels generated through the [OMG](https://github.com/JBEI/OMG) library, to build a predictive model through ART. ART's model will be able to predict isoprenol production given the design as input. We will then use this model to recommend designs that optimize isoprenol production."
+    "This notebook uses the designs created by ART and the corresponding isoprenol production levels generated through OMG, to build a predictive model through ART. ART's model will be able to predict isoprenol production given the design as input. We will then use this model to recommend designs that optimize isoprenol production."
    ]
   },
   {
@@ -104,7 +104,7 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Password for tradivojevic:  ················\n"
+      "Password for tradivojevic:  ··············\n"
      ]
     }
    ],
@@ -120,7 +120,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "273bd2ab4d6c4c11ac45c577c817564b",
+       "model_id": "1378131f0e3f49578a771b1768feeff9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1146,6 +1146,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Saving the data in EDD format, for use with the front end. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Pivot the dataframe back to EDD format, now including all the reaction names and modifications:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Line Name</th>\n",
+       "      <th>Measurement Type</th>\n",
+       "      <th>Value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Strain 1</td>\n",
+       "      <td>3-METHYL-3-BUTEN-1-OL</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Strain 1</td>\n",
+       "      <td>ACCOAC</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Strain 1</td>\n",
+       "      <td>MDH</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Strain 1</td>\n",
+       "      <td>PTAr</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Strain 1</td>\n",
+       "      <td>CS</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Line Name       Measurement Type  Value\n",
+       "0  Strain 1  3-METHYL-3-BUTEN-1-OL    0.0\n",
+       "1  Strain 1                 ACCOAC    1.0\n",
+       "2  Strain 1                    MDH    1.0\n",
+       "3  Strain 1                   PTAr    2.0\n",
+       "4  Strain 1                     CS    0.0"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = df.set_index('Line Name').stack().reset_index()\n",
+    "df.columns = ['Line Name', 'Measurement Type', 'Value']\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save this dataframe to a file for ART front end:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_file = '../data/ART_training_EDDstyle.csv'\n",
+    "df.to_csv(data_file, header=True, index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Store the names of all variables:"
    ]
   },
@@ -1215,7 +1332,7 @@
    "source": [
     "user_params = {}\n",
     "user_params['num_recommendations'] = 10                  # Number of final recommendations\n",
-    "user_params['output_directory'] = '../data/isoprenol/'  # Directory to store output files"
+    "user_params['output_directory'] = '../data/art_output/'  # Directory to store output files"
    ]
   },
   {
@@ -1239,8 +1356,8 @@
    "outputs": [],
    "source": [
     "art_params = {\n",
-    "    'response_var': [variables[0]],\n",
-    "    'input_var': variables[1:],\n",
+    "    'response_vars': [variables[0]],\n",
+    "    'input_vars': variables[1:],\n",
     "    'input_var_type': 'Categorical',\n",
     "    'seed': 10,\n",
     "    'num_recommendations': user_params['num_recommendations'],   \n",
@@ -1294,9 +1411,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [omegas, sigma]\n",
-      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1314,7 +1437,11 @@
       "NUTS: [omegas, sigma]\n",
       "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
       "The acceptance probability does not match the target. It is 0.6595131800190912, but should be close to 0.8. Try to increase the number of tuning steps.\n",
-      "There were 12 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+      "There were 12 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1332,7 +1459,11 @@
       "NUTS: [omegas, sigma]\n",
       "There was 1 divergence after tuning. Increase `target_accept` or reparameterize.\n",
       "There were 12 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "The acceptance probability does not match the target. It is 0.6462472422719335, but should be close to 0.8. Try to increase the number of tuning steps.\n"
+      "The acceptance probability does not match the target. It is 0.6462472422719335, but should be close to 0.8. Try to increase the number of tuning steps.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1349,7 +1480,11 @@
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [omegas, sigma]\n",
       "There were 11 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1366,7 +1501,11 @@
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [omegas, sigma]\n",
       "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "There were 9 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+      "There were 9 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1383,7 +1522,11 @@
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [omegas, sigma]\n",
       "There were 11 divergences after tuning. Increase `target_accept` or reparameterize.\n",
-      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+      "There were 2 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1401,7 +1544,11 @@
       "NUTS: [omegas, sigma]\n",
       "There was 1 divergence after tuning. Increase `target_accept` or reparameterize.\n",
       "The acceptance probability does not match the target. It is 0.9298139747992613, but should be close to 0.8. Try to increase the number of tuning steps.\n",
-      "There were 4 divergences after tuning. Increase `target_accept` or reparameterize.\n"
+      "There were 4 divergences after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1430,9 +1577,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [omegas, sigma]\n",
-      "There was 1 divergence after tuning. Increase `target_accept` or reparameterize.\n"
+      "There was 1 divergence after tuning. Increase `target_accept` or reparameterize.\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n"
      ]
     },
     {
@@ -1473,6 +1628,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'FitnessMulti' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/deap/creator.py:141: RuntimeWarning: A class named 'Individual' has already been created and it will be overwritten. Consider deleting previous creation of that class or rename it.\n",
+      "  RuntimeWarning)\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/sklearn/ensemble/forest.py:246: FutureWarning: The default value of n_estimators will change from 10 in version 0.20 to 100 in 0.22.\n",
+      "  \"10 in version 0.20 to 100 in 0.22.\", FutureWarning)\n",
       "Multiprocess sampling (2 chains in 2 jobs)\n",
       "NUTS: [omegas, sigma]\n",
       "There was 1 divergence after tuning. Increase `target_accept` or reparameterize.\n",
@@ -1488,6 +1649,16 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/matplotlib/font_manager.py:1241: UserWarning: findfont: Font family ['sans-serif'] not found. Falling back to DejaVu Sans.\n",
+      "  (prop.get_family(), self.defaultFamily[fontext]))\n",
+      "/usr/local/share/jupyteruser/.pyenv/versions/ART_3.6/lib/python3.6/site-packages/matplotlib/tight_layout.py:211: UserWarning: Tight layout not applied. tight_layout cannot make axes height small enough to accommodate all axes decorations\n",
+      "  warnings.warn('Tight layout not applied. '\n"
+     ]
     },
     {
      "data": {
@@ -1513,8 +1684,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 26min 6s, sys: 13min 51s, total: 39min 57s\n",
-      "Wall time: 22min 34s\n"
+      "CPU times: user 26min 57s, sys: 12min 14s, total: 39min 12s\n",
+      "Wall time: 22min 48s\n"
      ]
     }
    ],
@@ -1763,7 +1934,7 @@
    "outputs": [],
    "source": [
     "pred_col_name = 'Mean predicted Isoprenol [mM]'\n",
-    "art.recommendations = art.recommendations.rename(columns={art_params['response_var'][0]: pred_col_name})\n"
+    "art.recommendations = art.recommendations.rename(columns={art_params['response_vars'][0]: pred_col_name})\n"
    ]
   },
   {
