Updated tested kernels

--- a/notebooks/Isoprenol_generate_initial_designs.ipynb
+++ b/notebooks/Isoprenol_generate_initial_designs.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tested using **ART_v3.6** kernel on jprime.lbl.gov"
+    "Tested using **ART_v3.6** and **ART 3.9** kernels on jprime.lbl.gov"
    ]
   },
   {
